# OxFolder

./: README.md  api_document.md
app/: backend_deployment.md  db_comm.py  main.py  pyproject.toml  requirements.txt
app/oxfolder/: README.md  data_comm.py  document_embedder.py  graph.py  vals_formatting.json
app/oxfolder/documents/: README.md
app/oxfolder/saved_data/: README.md
app/oxfolder/temp/: README.md
app/templates/: README.md
web/: next.config.mjs  package.json
web/app/: PageFrame.tsx  globals.css  layout.tsx  models.ts  page-frame.module.scss  revalidate.ts
web/app/_components/button/: Button.tsx  button.module.scss
web/app/_components/dialog/: Dialog.tsx  dialog.module.scss
web/app/_components/icons/: plus.tsx
web/app/_components/page-content/: PageContent.tsx  page-content.module.scss
web/app/_data/: addTextSnippet.ts  getFileList.ts  getGraphData.ts  removeFile.ts  uploadFiles.ts
web/app/_graph/: page.tsx
web/app/_shared/: model.ts
web/app/_shared/components/new-snippet-dialog/: new-sippet-dialog.tsx  new-snippet-dialog.module.scss
web/app/_shared/hooks/: useSessionStorage.ts
web/app/_utils/: lerp.ts
web/app/all-snippets/: page.module.scss  page.tsx
web/app/files/: page.module.scss  page.tsx
web/app/files/[name]/: RemoveButton.tsx  page.module.scss  page.tsx
web/app/files/_components/add-text-dialog/: AddTextDialog.tsx  add-text-dialog.module.scss
web/app/files/_components/upload-files-dialog/: UploadFilesDialog.tsx  upload-files-dialog.module.scss
web/app/graph/: Graph.tsx  page.module.scss  page.tsx
