[project]
name = "oxfolder"
version = "0.1-dev"
authors = [
    { name = "Lucas Colley", email = "lucas.colley8@gmail.com" },
    { name = "Richard Yu", email = "richard.yu@univ.ox.ac.uk" },
    { name = "Yang Gao", email = "yang.gao@some.ox.ac.uk" },
    { name = "Alex Perry", email = "alex.perry@keble.ox.ac.uk" },
    { name = "Jamie Honeywill", email = "james.honeywill@balliol.ox.ac.uk" },
    { name = "Mehmet Koca", email = "mehmet.koca@sjc.ox.ac.uk" },
]
description = "Perform semantic analysis on documents and discover connections"
requires-python = "3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
]
dependencies = [
    "llama-index",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "transformers",
    "Flask",
    "gunicorn",
]
